# hushline-agents

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
agents/: AGENTS.md
agents/product/: AGENTS.A11Y.md  AGENTS.QA.md  AGENTS.SEC.md  AGENTS.md
agents/sales/: AGENTS.AE.md  AGENTS.SDR.md  AGENTS.md
agents/social/: AGENTS.md  README.md  package-lock.json  package.json
deploy/launchd/: com.hushline.runner-dashboard.plist
docs/: AGENT-RUNNER.md  SALES-AGENT.md  SOCIAL-AGENTS.md
sales/scripts/: install_launch_agent.sh  run_sales_contact_agent_launchd.sh  sales_contact_agent.py
scripts/: agent_daily_issue_runner.sh  agent_issue_bootstrap.sh  code_agent.sh  open_runner_dashboard.sh  sanitize_agent_run_log.py  validate_social_plists.py  weekly_hushline_code_agent_report_runner.py
social/scripts/: agent_daily_linkedin_publisher.sh  agent_daily_mastodon_publisher.sh  agent_daily_social_planner.sh  agent_weekly_verified_user_linkedin_publisher.sh  agent_weekly_verified_user_runner.sh  check_launchd_prereqs.sh  install_launch_agent.sh  run_daily_linkedin_launchd.sh  run_daily_planner_launchd.sh  run_hushline_feature_post_agent_launchd.sh  run_hushline_verified_user_post_agent_launchd.sh  run_manual_daily_post_launchd.sh  run_verified_user_weekly_launchd.sh  run_verified_user_weekly_linkedin_launchd.sh  run_weekly_article_launchd.sh  run_weekly_article_linkedin_launchd.sh  (+1 more)
tests/: test_agent_daily_issue_runner.py  test_code_agent.py  test_sales_contact_agent.py  test_social_agents.py  test_weekly_agent_report_runner.py
(+82 files in other folders)
