[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "hushline-agents"
version = "0.1.0"
description = "Automation for maintaining the Hush Line project"
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-only"
dependencies = []

[tool.setuptools]
py-modules = []

[project.optional-dependencies]
dev = [
    "mypy>=1.18,<2",
    "pytest>=9,<10",
    "ruff>=0.14,<1",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "INT",
    "PIE",
    "PL",
    "PT",
    "PYI",
    "RET",
    "S",
    "SIM",
    "UP",
    "W",
    "RUF100",
]
ignore = [
    "PLR0911",
    "PLR0912",
    "PLR0915",
    "RET505",
    "RET506",
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "PLR2004",
    "S101",
    "S105",
    "S311",
    "S603",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_implicit_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_configs = true
